node server changes for todo app: midway stop

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,6 +1,2 @@
-extends layouts/default
-
 block content
-  section(data-ng-view)
-  script(type="text/javascript").
-    window.user = !{user};
+    h1 test
