--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,4 +1,9 @@
 <div ng-controller="LoginCtrl">
+
     <h1>Login Page</h1>
-    <p>{{global.foo}}</p>
+
+    <br>Email: <input type="text" ng-model="email">
+    <br>Password: <input type="password" ng-model="password">
+
+    <br><button ng-click="login()">Login</button>
 </div>
