--- a/public/partials/todo.html
+++ b/public/partials/todo.html
@@ -4,6 +4,10 @@
 
     <input type="text" ng-model="item"><button ng-click="addTodoItem()">add</button>
 
+    <div ng-show="!!errmsg">
+        {{errmsg}}
+    </div>
+
     <ul ng-repeat="todo in todolist">
         <li>{{todo.item}}</li>
     </ul>
